# FocusX-openenv

./: Dockerfile  README.md  agent.py  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  task.py
FocusX-openenv/: Dockerfile  README.md  agent.py  env.py  grader.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirenments.txt  run.py  task.py
FocusX-openenv/Server/: app.py
FocusX-openenv/__pycache__/: env.cpython-313.pyc.2636683377328
