[project]
name = "focusx-openenv"
version = "0.1.0"
description = "AI Productivity OpenEnv"
authors = [
    {name = "Partho"}
]

dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "gradio",
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
