[project]
name = "focusx-openenv"
version = "0.1.0"
description = "AI Productivity OpenEnv Environment"
authors = [
    {name = "Partho"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0",
    "openai>=1.0.0"  
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
